--- a/Single_price_grid_component/index.html
+++ b/Single_price_grid_component/index.html
@@ -19,18 +19,24 @@
           <p>Gain access to our full library of tutorials along with expert code reviews. 
   Perfect for any developers who are serious about honing their skills.</p>
       </div>
+
+
+    <div id="left-right">
       <div id="left">
           <h3>Monthly Subscription</h3>
           <h3>&dollar;29</h3> 
           <h4>per month</h4>
-          <h4>Full access for less than &dollar;1 a day</h4>
-          <h3>Sign Up</h3>
+          <p>Full access for less than &dollar;1 a day</p>
+          <input type="button" value="Sign Up">
       </div>
       <div id="right">
         <h3>Why Us</h3>
         <p>Tutorials by industry experts Peer &amp; expert code review Coding exercises Access to our GitHub repos Community forum Flashcard decks New videos every week</p>
       </div>
-          
+    </div>
+  </div>
+
+
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
