--- a/Single_price_grid_component/index.html
+++ b/Single_price_grid_component/index.html
@@ -30,8 +30,16 @@
           <input type="button" value="Sign Up">
       </div>
       <div id="right">
-        <h3>Why Us</h3>
-        <p>Tutorials by industry experts Peer &amp; expert code review Coding exercises Access to our GitHub repos Community forum Flashcard decks New videos every week</p>
+        <ul>  
+          <h3>Why Us</h3>
+          <li>Tutorials by industry experts</li>
+          <li>Peer &amp; expert code review</li>
+          <li>Coding exercises</li>
+          <li>Access to our GitHub repos</li>
+          <li>Community forum</li>
+          <li>Flashcard decks</li>
+          <li>New videos every week</li>
+        </ul>
       </div>
     </div>
   </div>
