change the all code like <span> and .class and add <div>

--- a/Single_price_grid_component/index.html
+++ b/Single_price_grid_component/index.html
@@ -11,27 +11,31 @@
 
     </head>
     <body>
-      <div id="HEAD">
+<!-------------------------------------------------------------------------------------------------------------->
+    <div class="card">
+        <div class="Community">
           <h2>Join our community</h2>
-
-          <h2>30-day, hassle-free money back guarantee</h2>
-
+          <h3>30-day, hassle-free money back guarantee</h3>
           <p>Gain access to our full library of tutorials along with expert code reviews. 
   Perfect for any developers who are serious about honing their skills.</p>
-      </div>
-
-
-    <div id="left-right">
-      <div id="left">
+        </div>    
+    </div>
+<!-------------------------------------------------------------------------------------------------------------->
+    <div class="plan">
+      <div class="sub">
           <h3>Monthly Subscription</h3>
-          <h3>&dollar;29</h3> 
-          <h4>per month</h4>
-          <p>Full access for less than &dollar;1 a day</p>
-          <input type="button" value="Sign Up">
+          <span class="price">
+              <h1>&dollar;29</h1> <p class="price-p">per month</p>
+          </span>
+          <span>
+            <p class="access">Full access for less than &dollar;1 a day</p>
+            <button>Sign Up</button>
+          </span>
       </div>
-      <div id="right">
-        <ul>  
-          <h3>Why Us</h3>
+<!-------------------------------------------------------------------------------------------------------------->
+      <div class="Why">
+        <h3>Why Us</h3>
+        <ul>
           <li>Tutorials by industry experts</li>
           <li>Peer &amp; expert code review</li>
           <li>Coding exercises</li>
@@ -43,7 +47,7 @@
       </div>
     </div>
   </div>
-
+<!-------------------------------------------------------------------------------------------------------------->
 
   <footer>
     <p class="attribution">
