--- a/Single_price_grid_component/index.html
+++ b/Single_price_grid_component/index.html
@@ -52,7 +52,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">abdelmalek mazouzi</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/Aforar">abdelmalek mazouzi</a>.
     </p>
   </footer>
 </body>
