change font and background color

--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -13,14 +13,14 @@
 <body>
   <div class="back">
     <div class="qr">
-      <img loading="lazy" src="images/image-qr-code.png" alt="code qr" width="200" height="200">
+      <img loading="lazy" src="images/image-qr-code.png" alt="code qr" >
       <p class="font">Improve your front-end skills by building projects</p>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <p class="scan-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Abdelmalek Mazouzi</a>.
   </div>
 </body>
 </html>
