--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Abdelmalek Mazouzi</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Aforar">Abdelmalek Mazouzi</a>.
   </div>
 </body>
 </html>
