complete project html and css

--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -33,29 +33,29 @@
                       <div class="badge" >
                           <img src="assets/images/icon-reaction.svg" alt="icon">
                           <b>Reaction</b>
-                          <p><b>80</b>/ 100</p>
                       </div>
+                      <p><b>80</b>/ 100</p>
                   </div>
                   <div class="row">
                       <div class="badge">
                           <img src="assets/images/icon-memory.svg" alt="icon">
                           <b>Memory</b>
-                          <p><b>92</b>/ 100</p>
                       </div>
+                      <p><b>92</b>/ 100</p>
                   </div>
                   <div class="row">
                       <div class="badge">
                           <img src="assets/images/icon-verbal.svg" alt="icon">
                           <b>Verbal</b>
-                          <p><b>61</b> / 100</p>
                       </div>
+                      <p><b>61</b> / 100</p>
                   </div>
                   <div class="row">
                       <div class="badge">
                           <img src="assets/images/icon-visual.svg" alt="icon">
                           <b>Visual</b>
-                          <p><b>72</b> / 100</p>
                       </div>
+                      <p><b>72</b> / 100</p>
                   </div>
                 </div>
                 <button class="btn">Continue</button>
@@ -64,11 +64,11 @@
   </div>
 
 
-<!--
-</div>
-  <div class="attribution">
+
+  </div>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>-->
+    Coded by <a href="https://www.frontendmentor.io/profile/Aforar">Abdelmalek Mazouzi</a>.
+  </div>
 </body>
 </html>
